@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "442-1-g696c18f";
+    public static final String VERSION = "443";
 }
