@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  July 6 2017, 12:46
+  deviceServiceVersion = 1013444
+	
+  [+] Added parameter quantityCorrectionEnabled
+	
+********************************************************************************
+
   July 5 2017, 22:00
   deviceServiceVersion = 1013443
 	
